tests/ui/attributes/field-attributes-vis-unresolved.stderr
error[E0433]: cannot find item `nonexistent` in this scope
  --> $DIR/field-attributes-vis-unresolved.rs:17:12
   |
LL |     pub(in nonexistent) field: u8
   |            ^^^^^^^^^^^ you might be missing a crate named `nonexistent`
   |
   = help: consider adding `extern crate nonexistent` to use the `nonexistent` crate

error[E0433]: cannot find item `nonexistent` in this scope
  --> $DIR/field-attributes-vis-unresolved.rs:22:12
   |
LL |     pub(in nonexistent) u8
   |            ^^^^^^^^^^^ you might be missing a crate named `nonexistent`
   |
   = help: consider adding `extern crate nonexistent` to use the `nonexistent` crate

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
